added readme and removed line break between info section

--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
                 </div>
                 
                 <!--Information bar-->
-                <div class="info fadeInAnimated delay1">
-                    &#8213&#8213 <button class="button" onclick="todoAlert()">&nbsp;About Me&nbsp;</button>&#8213&#8213
-                    <button class="button" onclick="todoAlert()">&nbsp;Projects&nbsp;</button> &#8213&#8213
-                    <button class="button" onclick="todoAlert()">&nbsp;Contact Info&nbsp;</button> &#8213&#8213
+                <div class="info fadeInAnimated delay1"> 
+                    <span class="line" style="width:25px;">&nbsp;</span>
+                    <button class="button" onclick="todoAlert()">&nbsp;About Me&nbsp;</button>
+                    <span class="line" style="width:25px;">&nbsp;</span>
+                    <button class="button" onclick="todoAlert()">&nbsp;Projects&nbsp;</button>
+                    <span class="line" style="width:25px;">&nbsp;</span>
+                    <button class="button" onclick="todoAlert()">&nbsp;Contact Info&nbsp;</button>
+                    <span class="line" style="width:25px;">&nbsp;</span>
                 </div>
 
                 <!--Contact Logos-->
