Fixed typo (ty tracy)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span aria-hidden="true" style="background: transparent;">&times;</span>
                 </button>
                 <strong style="background: transparent">
-                About Me, Projects and Contact Me sections are currently under devlopement! 
+                About Me, Projects and Contact Me sections are currently under development! 
                 <br>
                 Check back again soon!
                 </strong>
