updated social and fixed tab size in source files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!--FontAwesome-->
         <script src="https://kit.fontawesome.com/17078e9fc4.js"></script>
 
-        <title>Namanh Tran</title>
+        <title>namanh</title>
     </head>
     <body>
         
@@ -57,9 +57,8 @@
                 <div id="contact" class="fadeInAnimated delay3" style="display: block;">
                     <a href="https://www.github.com/NamanhTran" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/namanh-tran/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://twitter.com/tran_namanh" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://twitter.com/deNamanhAtor" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.instagram.com/namanh_trann/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/namanh.tran.7" target="_blank"><i class="fab fa-facebook"></i></a>
                 </div>
             </div>
         </section>
